--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>tk.mybatis</groupId>
-    <artifactId>mybatis-spring-boot</artifactId>
+    <artifactId>myBatis-springBoot-dubbo</artifactId>
     <version>1.0.0-SNAPSHOT</version>
 
     <parent>
